--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,10 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
+  main {
+   min-height: 0px;
+   flex: 1 1 0%;
+   display: flex;
+   flex-direction: column;
+ }
 }
