--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i');
 @import '~ngx-perfect-scrollbar/dist/lib/perfect-scrollbar.component.css';
+@import '~@carto/mapbox-gl/dist/mapbox-gl.css';
 @import './reset.scss';
 @import './common.scss';
 
