--- a/src/app/common/map/map.component.html
+++ b/src/app/common/map/map.component.html
@@ -1,2 +1,2 @@
 <div #map class="map"></div>
-<app-map *ngIf="lens" class="lens"></app-map>
+<app-map #mapLens *ngIf="lens" class="lens" [class.animate]="lensAnimate"></app-map>
