--- a/src/app/sections/story-maps/story-map/story-map.component.html
+++ b/src/app/sections/story-maps/story-map/story-map.component.html
@@ -1,1 +1,20 @@
-<app-map [bbox]="bbox" [lens]="true"></app-map>
+<div class="header topTransition" *ngIf="mapReady">
+  <app-histogram [data]="data" [observableDate]="storyMapService.currentData"></app-histogram>
+</div>
+<app-map [bbox]="bbox" [lens]="true" [navigationControl]="true"></app-map>
+<div class="summary leftTransition"  *ngIf="mapReady">
+  <h1>{{'Ventas total €' | translate }}</h1>
+  <!-- <h3>
+    1.234.567 -->
+    <!-- <div counto [step]="1" [countTo]="1234567" [countFrom]="0" [duration]="0.25" (countoChange)="counto = $event">{{counto | number : '1.0-0' : utilService.getLocale()}}</div> -->
+  <!-- </h3> -->
+  <app-counter [step]="1" [countTo]="totalValue" [countFrom]="beforeTotalValue" [duration]="counterDuration"></app-counter>
+</div>
+<app-category-tab *ngIf="mapReady" class="leftTransition" [maxValue]="limits?.max" [observableData]="storyMapService.currentData"></app-category-tab>
+<div class="title">
+  <img height="46" src="/assets/symbol-repsol.png">
+  <div>
+    <h3>{{'Consumo' | translate}}</h3>
+    <h1>{{'Estaciones y su evolución' | translate}}</h1>
+  </div>
+</div>
