--- a/src/app/sections/story-maps/story-map/story-map.component.scss
+++ b/src/app/sections/story-maps/story-map/story-map.component.scss
@@ -3,4 +3,73 @@
 :host {
   flex: 1 1 0%;
   display: flex;
+  flex-direction: column;
+  position: relative;
+  .header {
+    // flex: 0 0 64px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 64px;
+    z-index: 1;
+    background-color: rgba(0,16,24,0.92);
+    border-bottom: 1px solid rgba(255,255,255,0.12);
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+  }
+  .summary {
+    position: absolute;
+    z-index: 1;
+    left: 60px;
+    top: 88px;
+    h1 {
+      color: #00A2BD;
+      font-size: 24px;
+      @include font('semibold');
+      text-transform: uppercase;
+      line-height: 24px;
+    }
+    app-counter {
+      font-size: 72px;
+      @include font('repsolviet', bold);
+      color: $colorWhite;
+      line-height: 72px;
+      margin-top: 8px;
+    }
+  }
+  app-category-tab {
+    position: absolute;
+    z-index: 1;
+    top: 217px;
+    left: 48px;
+  }
+  .title {
+    position: absolute;
+    z-index: 1;
+    bottom: 40px;
+    left: 48px;
+    display: flex;
+    justify-content: center;
+    >div {
+      display: flex;
+      flex-direction: column;
+      margin-left: 32px;
+      h1 {
+        color: $colorWhite;
+        @include font('repsolviet', bold);
+        font-size: 18px;
+        line-height: 18px;
+      }
+      h3 {
+        font-style: italic;
+        color: #F5A712;
+        font-size: 12px;
+        @include font('semibold');
+        text-transform: uppercase;
+        line-height: 16px;
+      }
+    }
+  }
 }
