--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -7,8 +7,74 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: $fontFamily;
   @include font('regular');
   overflow: hidden;
   max-height: 100vh;
+
+  button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .mapboxgl-ctrl-bottom-left {
+    left: 50%;
+    transform: translateX(-50%);
+    .mapboxgl-ctrl{
+      display: flex;
+      border-radius: 2px;
+      box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
+      margin: 0;
+      margin-bottom: 24px;
+      background-color: $colorWhite;
+      >button {
+        width: 32px;
+        height: 32px;
+        background-repeat: no-repeat;
+        background-position: center;
+        &+button {
+          border: none;
+          border-left: 1px solid #E6E6E6;
+        }
+        &.mapboxgl-ctrl-zoom-in {
+          background-image: url('/assets/icons/zoom-in.svg');
+        }
+        &.mapboxgl-ctrl-zoom-out {
+          background-image: url('/assets/icons/zoom-out.svg');
+        }
+      }
+    }
+  }
+
+  .topTransition {
+    animation: topTransition $animationTimeDefault $animationFuncAlt;
+    animation-fill-mode: both;
+  }
+
+  .leftTransition {
+    animation: leftTransition $animationTimeDefault $animationFuncAlt;
+    animation-fill-mode: both;
+  }
+
+  @keyframes topTransition{
+    from {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes leftTransition{
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 }
