--- a/src/app/common/components/histogram/histogram.component.html
+++ b/src/app/common/components/histogram/histogram.component.html
@@ -1,6 +1,6 @@
 <button class="play"></button>
 <div class="content">
-  <h3 *ngIf="date">{{date | date:'EE dd MMM yyyy'}}&nbsp;<span>{{date | date:'hh:mm'}}</span></h3>
+  <h3 *ngIf="date">{{date | date:'EE dd MMM yyyy'}}&nbsp;<span>{{date | date:'HH:mm': '+0000'}}</span></h3>
   <svg #svg></svg>
   <div #cursor class="cursor"></div>
 </div>
