--- a/src/app/common/map/map.component.scss
+++ b/src/app/common/map/map.component.scss
@@ -7,7 +7,7 @@
   position: relative;
   &.lens {
     position: absolute;
-    width: 50%;
+    width: 42%;
     height: 0;
     bottom: 0;
     right: 0;
@@ -25,6 +25,7 @@
           border-radius: 100%;
           border: 4px solid #979797;
           outline: none;
+          box-shadow: 0 0 24px 0 rgba(0,0,0,0.8);
         }
       }
     }
@@ -38,7 +39,7 @@
       transform: translateX(100%) translateY(16%) rotate(-80deg);
     }
     to {
-      transform: translateX(13%) translateY(16%) rotate(0);
+      transform: translateX(14%) translateY(17%) rotate(0);
     }
   }
 }
