--- a/src/app/sections/story-maps/story-map/story-map.component.scss
+++ b/src/app/sections/story-maps/story-map/story-map.component.scss
@@ -72,4 +72,33 @@
       }
     }
   }
+  .stationDetail {
+    position: absolute;
+    z-index: 1;
+    right: 28px;
+    bottom: 53px;
+    >div {
+      display: flex;
+      justify-content: flex-end;
+      color: $colorWhite;
+      @include font('repsolviet');
+      font-size: 72px;
+      line-height: 72px;
+    }
+    h3 {
+      margin-top: 13px;
+      @include font('semibold');
+      font-size: 16px;
+      line-height: 16px;
+      color: $colorWhite;
+      text-align: right;
+    }
+    h4 {
+      color: #FE8201;
+      font-size: 18px;
+      @include font('repsolviet', bold);
+      line-height: 18px;
+      text-shadow: -1px 0 #001018, 0 1px #001018, 1px 0 #001018, 0 -1px #001018
+    }
+  }
 }
