--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -38,9 +38,16 @@
        url('/assets/fonts/repsolviet-regular-webfont.svg#svgFontName') format('svg');
 }
 
-$colorPrimary: #0255A5;
-$colorAccent: #1785FB;
-$colorSecondary: #C8B17B;
+$colorPrimary: #e67600;
+$colorSecondary1: #E0DED9;
+$colorSecondary2: #9C9081;
+$colorSecondary3: #5C4E44;
+$colorSecondary4: #007E94;
+$colorSecondary5: #6A972C;
+$colorSecondary6: #E40028;
+$colorSecondary7: #041E42;
+$colorSecondary8: #003B5C;
+$colorSecondary9: #FFB81C;
 
 $colorBlack: #000;
 $colorN100: #191919;
