--- a/src/app/common/components/histogram/histogram.component.scss
+++ b/src/app/common/components/histogram/histogram.component.scss
@@ -8,15 +8,15 @@
     flex: 0 0 32px;
     height: 100%;
     border-radius: 4px 0 0 4px;
-    background-color: #01859B;
-    background-image: url('/assets/icons/play-white.svg');
+    background-color: $colorWhite;
+    background-image: url('/assets/icons/play-orange.svg');
     background-repeat: no-repeat;
     background-position: center;
   }
   .content {
     flex: 1 1 0%;
     height: 100%;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255,255,255,0.2);
     border-radius: 0 4px 4px 0;
     display: flex;
     position: relative;
@@ -38,7 +38,7 @@
       height: 100%;
       // margin-left: 24px;
       rect{
-        fill: #01859B;
+        fill: $colorWhite;
       }
     }
     .cursor {
@@ -48,21 +48,21 @@
       top: 0;
       bottom: 0;
       width: 2px;
-      background-color: $colorWhite;
+      background-color: $colorSecondary7;
       transition: transform $animationTimeFast $animationFuncAlt, opacity $animationTimeFast $animationFuncAlt $animationTimeFast;
       opacity: 0;
-      &:after {
-        content: '';
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translateY(-50%) translateX(-50%);
-        z-index: 1;
-        width: 12px;
-        height: 12px;
-        background-color: $colorWhite;
-        border-radius: 100%;
-      }
+      // &:after {
+      //   content: '';
+      //   position: absolute;
+      //   left: 50%;
+      //   top: 50%;
+      //   transform: translateY(-50%) translateX(-50%);
+      //   z-index: 1;
+      //   width: 12px;
+      //   height: 12px;
+      //   background-color: $colorWhite;
+      //   border-radius: 100%;
+      // }
     }
   }
 }
