--- a/src/app/common/components/category-tab/category-tab.component.html
+++ b/src/app/common/components/category-tab/category-tab.component.html
@@ -2,11 +2,11 @@
 <div class="counters">
   <div>
     <h4>{{'Oil' | translate}}</h4>
-    <!-- <app-counter [step]="counterStep" [countTo]="aggValueOil" [duration]="counterDuration"></app-counter> -->
+    <app-counter [step]="counterStep" [countTo]="aggValueOil" [duration]="counterDuration"></app-counter>
   </div>
   <div>
     <h4>{{'Non Oil' | translate}}</h4>
-    <!-- <app-counter [step]="counterStep" [countTo]="aggValueNonOil" [duration]="counterDuration"></app-counter> -->
+    <app-counter [step]="counterStep" [countTo]="aggValueNonOil" [duration]="counterDuration"></app-counter>
   </div>
 </div>
 <div class="categories" [class.inverCircleTransition]="restartAgg">
