--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.html
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.html
@@ -10,7 +10,8 @@
   </div>
   <div class="content">
     <div>
-      <app-counter [step]="counterStep" [countTo]="data.liters" [unit]="'m3'" [duration]="counterDuration"></app-counter>
+      <app-counter [step]="counterStep" [countTo]="data.liters" [duration]="counterDuration"></app-counter>
+      m<sup>3</sup>
       <span>{{'de combustible' | translate}}</span>
     </div>
     <div>
