--- a/src/app/sections/story-maps/story-map/story-map.component.scss
+++ b/src/app/sections/story-maps/story-map/story-map.component.scss
@@ -193,7 +193,7 @@
       line-height: 18px;
       text-shadow: -1px 0 #001018, 0 1px #001018, 1px 0 #001018, 0 -1px #001018;
       span {
-        color: $colorSecondary6;
+        // color: $colorSecondary6;
       }
     }
   }
