--- a/src/app/common/components/histogram/histogram.component.html
+++ b/src/app/common/components/histogram/histogram.component.html
@@ -1,6 +1,9 @@
-<button class="play"></button>
+<button class="play" (click)="togglePause()" [class.pause]="pause"></button>
 <div class="content">
   <h3 *ngIf="date">{{date | date:'EE dd MMM yyyy'}}&nbsp;<span>{{date | date:'HH:mm': '+0000'}}</span></h3>
   <svg #svg></svg>
   <div #cursor class="cursor"></div>
+  <div class="tooltip">
+    123.456 €
+  </div>
 </div>
