--- a/src/app/common/components/histogram/histogram.component.scss
+++ b/src/app/common/components/histogram/histogram.component.scss
@@ -9,9 +9,12 @@
     height: 100%;
     border-radius: 4px 0 0 4px;
     background-color: $colorWhite;
-    background-image: url('/assets/icons/play-orange.svg');
+    background-image: url('/assets/icons/pause.svg');
     background-repeat: no-repeat;
     background-position: center;
+    &.pause {
+      background-image: url('/assets/icons/play-orange.svg');
+    }
   }
   .content {
     flex: 1 1 0%;
@@ -23,7 +26,7 @@
     h3 {
       @include font('repsolviet');
       font-size: 18px;
-      color: $colorWhite;
+      color: $colorSecondary7;
       height: 100%;
       display: flex;
       align-items: center;
@@ -39,6 +42,13 @@
       // margin-left: 24px;
       rect{
         fill: $colorWhite;
+        &.interactive {
+          fill: transparent;
+          cursor: pointer;
+          &:hover {
+            fill: $colorSecondary7;
+          }
+        }
       }
     }
     .cursor {
@@ -63,6 +73,13 @@
       //   background-color: $colorWhite;
       //   border-radius: 100%;
       // }
+    }
+    .tooltip {
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      display: none;
     }
   }
 }
