--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -48,12 +48,12 @@ body {
 
   .mapboxgl-popup-content {
     padding: 0;
-    border-radius: 0 0 2px 2px;
+    border-radius: 2px;
   }
 
-  // .mapboxgl-popup-tip {
-  //   display: none;
-  // }
+  .mapboxgl-popup-tip {
+    border: 4px solid transparent;
+  }
 
   .topTransition {
     animation: topTransition $animationTimeDefault $animationFuncAlt;
